<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">消费本</string>
    <string name="add_card">添加卡片</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="amount_of_charge">充值金额</string>
    <string name="times_of_charge">充值次数</string>
    <string name="average_per_times">平均每次</string>
    <string name="yuan">元</string>

    <string name="hint_back_to_desk">再按一次返回键返回桌面</string>
    <string name="hint_search">卡号/客户/电话</string>
    <string name="hint_card_empty">还没有客户卡片，请添加客户卡片。</string>
    <string name="hint_input_userName">请输入昵称</string>
    <string name="hint_input_cardNo">请输入卡号</string>
    <string name="hint_input_userPhone">请输入电话</string>
    <string name="hint_input_userAddr">请输入住址</string>
    <string name="hint_input_carNo">请输入车牌号</string>
    <string name="hint_input_memo">请输入备注</string>
    <string name="hint_input_store_name">请输入店铺名称</string>
    <string name="send_msg_to_customer">发送短信通知客户</string>
    <string name="consumption_pattern">消费模式</string>
    <string name="casual">随意</string>
    <string name="by_time">计时</string>
    <string name="by_count">计次</string>
    <string name="default_amount_of_per_consumption">默认每次消费金额</string>
    <string name="hourly_rate_of_consumption_by_time">计时消费每小时费率</string>
    <string name="count">次</string>
    <string name="hour">小时</string>
    <string name="sms_key_user_name">{客户名称}</string>
    <string name="sms_key_current_time">{时间}</string>
    <string name="sms_key_card_no">{卡号}</string>
    <string name="sms_key_price">{金额}</string>
    <string name="sms_key_balance">{余额}</string>
    <string name="sms_key_store_name">{店名}</string>
    <string name="recharge_prompt_sms_template">充值提示短信模板</string>
    <string name="consumer_tips_sms_template">消费提示短信模板</string>
    <string name="setting_dialog_hint">\t\t\t\t短信模板可以插入以下特殊标记（含英文花括号），特殊标记将会自动替换为对应的数据：\n\n{客户名称}，{卡号}，{时间}，{金额}，{余额}，{店名}。</string>
    <string name="hint_version">版权所有，Jeremy，2017</string>
    <string name="version_update">版本更新</string>
    <string name="contact_us">联系我们</string>
    <string name="official_website">官方网站</string>
    <string name="value_website">www.baidu.com</string>
    <string name="value_contact">12345678</string>
    <string name="value_version">已是最新版本(1.0)</string>
    <string name="hint_input_feedback">在这里输入您的意见、建议、商务合作请求、功能改进要求等</string>
    <string name="send">发送</string>
    <string name="hint_input_phone_or_email">能联系到您的电话或邮箱</string>

    <string name="consumption">消费</string>
    <string name="recharge">充值</string>
    <string name="consumption_record">消费记录</string>
    <string name="detail_info">详细信息</string>
    <string name="recharge_record">充值记录</string>
    <string name="customer">客户：</string>
    <string name="test_user">林先生</string>
    <string name="test_carNo">粤CAB123</string>
    <string name="carNo">卡号：</string>
    <string name="current_price">当前余额：</string>
    <string name="consumption_price">消费金额</string>
    <string name="price_of_consumption">消费单价</string>
    <string name="every_count">每次</string>
    <string name="by_count_or_time">计次/时</string>
    <string name="recharge_price">充值金额</string>
    <string name="recharge_count">充值次数</string>
    <string name="average_count">平均每次</string>
    <string name="price">金额</string>
    <string name="recharge_time">充值时间</string>
    <string name="memo">备注</string>
    <string name="consumption_time">消费时间</string>
    <string name="current_score">当前积分</string>
    <string name="score">分</string>
    <string name="ok">确定</string>
    <string name="field_no_be_null">输入不能为空</string>
    <string name="user_name">用户名</string>
    <string name="card_no">卡号</string>
    <string name="user_phone">电话</string>
    <string name="user_addr">住址</string>
    <string name="car_no">车牌号</string>
    <string name="store_name">店铺名称</string>
    <string name="price_by_count">每次消费金额</string>
    <string name="price_by_hour">每小时费率</string>
    <string name="add_success">添加成功</string>
    <string name="search_key">搜索关键字</string>
    <string name="search_result_is_null">搜索结果为空</string>
    <string name="sim_no_ready">当前检测无可用SIM卡，发送短信可能会失败。</string>
    <string name="last_ten_search_record">最近10条查询记录</string>
    <string name="no_search_record">暂无查询记录</string>
    <string name="sms_send_finish">短信已发送</string>
    <string name="record_detail">记录详情</string>
    <string name="consumption_count">消费次数</string>
    <string name="no_be_zero">必须大于0</string>
    <string name="is_exist">已存在</string>
    <string name="expired_time">有效期</string>
    <string name="recharge_success">充值成功</string>
    <string name="recharge_error">充值失败</string>
    <string name="consume_success">消费成功</string>
    <string name="consume_error">消费失败</string>
    <string name="curr_balance_no_enough">当前余额已不足，请充值</string>
    <string name="is_all_data">已是全部信息</string>
    <string name="cancel">取消</string>
    <string name="consume_or_not">确定是否消费？</string>
    <string name="recharge_or_not">确定是否充值？</string>
    <string name="share_content">开店的都来看看，我发现一个手机可用的好东东，可以用【消费本】来管理用户的计时、计次、积分充值消费，再也不用纸质的卡片和其他繁琐的软件了，电脑都省了，网线也不用拉，还可以短信通知客户，辣么方便，你也赶紧试试吧，洗车点、理发店、美容院、培训点必备！凡是充值消费的都可以用！！最重要的是可免费使用！！</string>
    <string name="share_to">分享到</string>
    <string name="current_version">当前版本：</string>
    <string name="has_new_version">检测到新版本：v</string>
    <string name="send_error">发送失败</string>
    <string name="send_success">发送成功</string>
    <string name="feedback_content">反馈内容</string>
    <string name="contact">联系方式</string>
    <string name="send_error2">发送失败，请稍后重试！</string>
    <string name="thank_for_feedback">感谢您的支持，我们会在第一时间和您取得联系！</string>
    <string name="please_check_network">请检查网络连接</string>
    <string name="close">关</string>
    <string name="open">开</string>
    <string name="sure_to_delete">确定是否删除该记录？</string>
    <string name="bom_settings">消费项目设置</string>
    <string name="bom_name">项目名称</string>
    <string name="unit">单位</string>
    <string name="unit_price">单价</string>
    <string name="bom_setting">消费项目设置</string>
    <string name="save_success">保存成功</string>
    <string name="add_bom">新增项目</string>
    <string name="hint_input_bom_name">请输入项目名称</string>
    <string name="edit_bom">修改项目</string>
    <string name="current_consume_bom_list">当前消费清单：</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="select_bom">选择消费项目</string>
    <string name="please_add_bom">请添加消费项目</string>
    <string name="the_sum_money_of_consumption_are">本次消费价格共为</string>
    <string name="consumption_useTime">消费用时</string>
    <string name="bom_unit_price">项目单价</string>
    <string name="hint">提示</string>
    <string name="invalid_boms_and_go_to_setting">没有可用的项目，请前往设置页面新增或启用项目。</string>
    <string name="go">前往</string>
    <string name="card_list">卡片列表</string>
    <string name="data_backup">数据备份</string>
    <string name="data_restore">数据恢复</string>
    <string name="backup_in_progress">数据备份中....</string>
    <string name="restore_in_progress">数据恢复中...</string>
    <string name="backup_success">数据备份成功</string>
    <string name="backup_error">数据备份失败</string>
    <string name="restore_success">数据恢复成功</string>
    <string name="restore_error">数据恢复失败</string>
    <string name="no_data">暂无数据</string>
</resources>
