<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.jeremy.android.consumer.about.AboutActivity"
    tools:ignore="MissingPrefix">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_bg"
        tools:ignore="MissingPrefix">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:src="@drawable/app_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                fontPath="fonts/Bodoni_MT_Black.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/hint_version"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/layout_version_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_white_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/version_update"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/value_version"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2px"
                android:background="@drawable/selector_white_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/contact_us"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/value_contact"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2px"
                android:background="@drawable/selector_white_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:text="@string/official_website"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/value_website"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edt_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/white_full_round_bg"
                android:gravity="start"
                android:hint="@string/hint_input_feedback"
                android:minLines="6"
                android:padding="4dp"
                android:textColorHint="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/edt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="6dp"
                    android:layout_toLeftOf="@+id/btn_send"
                    android:background="@drawable/white_full_round_bg"
                    android:hint="@string/hint_input_phone_or_email"
                    android:inputType="phone|textEmailAddress"
                    android:padding="4dp"
                    android:textColorHint="@color/gray" />

                <com.dd.CircularProgressButton
                    android:id="@+id/btn_send"
                    android:layout_width="90dp"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="8dp"
                    app:cpb_textComplete="@string/send_success"
                    app:cpb_textError="@string/send_error"
                    app:cpb_textIdle="@string/send" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
