<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/bom_name"
            android:textSize="20sp" />

        <com.jeremy.android.consumer.view.XEditText
            android:id="@+id/edt_bom_name"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/white_full_round_bg"
            android:drawableRight="@drawable/ic_clear_black"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_bom_name"
            android:padding="4dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/unit_price"
            android:textSize="20sp" />

        <com.jeremy.android.consumer.view.XEditText
            android:id="@+id/edt_unit_price"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/white_full_round_bg"
            android:drawableRight="@drawable/ic_clear_black"
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:padding="4dp"
            android:text="0.0"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/unit"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/count" />

            <RadioButton
                android:id="@+id/rb_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hour" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/memo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_memo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/white_full_round_bg"
            android:enabled="true"
            android:gravity="top"
            android:hint="@string/hint_input_memo"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="4dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray" />
    </LinearLayout>

</LinearLayout>