<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/page_bg"
    android:orientation="vertical"
    tools:context=".cardDetail.tabs.recharge.RechargeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/hint_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/customer"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/hint_customer"
                android:text="@string/test_user"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@+id/tv_card_no"
                android:text="@string/carNo"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_card_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/test_carNo"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/current_price"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@+id/tv_current_price"
                android:text="¥"
                android:textColor="@color/red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_current_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@+id/hint_yuan"
                android:text="0.0"
                android:textColor="@color/red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hint_yuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/yuan"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/hint_recharge_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/recharge_price"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_recharge_price"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/hint_recharge_amount"
                android:background="@drawable/white_full_round_bg"
                android:gravity="center_vertical|right"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:padding="4dp"
                android:text="0.0"
                android:textColor="@color/red_dark" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edt_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/white_full_round_bg"
            android:enabled="true"
            android:gravity="top"
            android:hint="@string/hint_input_memo"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:minLines="4"
            android:padding="4dp"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center">

        <com.dd.CircularProgressButton
            android:id="@+id/btn_recharge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:cpb_cornerRadius="12dp"
            app:cpb_textComplete="@string/recharge_success"
            app:cpb_textError="@string/recharge_error"
            app:cpb_textIdle="@string/recharge" />

        <!--<Button-->
        <!--android:id="@+id/btn_recharge"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:background="@drawable/selector_btn_green_round"-->
        <!--android:text="@string/recharge"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="24sp" />-->
    </LinearLayout>

</LinearLayout>
