<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.jeremy.android.consumer.setting.BomSetting.BomSettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_bg"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        tools:ignore="MissingPrefix">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bom_setting"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </android.support.v7.widget.Toolbar>

    <include
        android:id="@+id/layout_add"
        layout="@layout/item_bom_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/tab_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_eyes_white" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="@color/white" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_delete_white2" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/bom_name"
            android:textColor="@color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/unit_price"
            android:textColor="@color/white" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/unit"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcV_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
